--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,21 +28,26 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements.txt
+            make install
+            # Install hadolint
+            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
+            chmod +x /bin/hadolint
+            #pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
+          path:
+            - ./venv
         
-      # run tests!
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
       # run lints!
       - run:
           name: run lint
           command: |
             . venv/bin/activate
             make lint
+
+workflows:
+  default:
+    jobs:
+      - build
