--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,30 @@
-version: 2
+version: 2.1
+
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.6.7-stretch
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
+      - image: python:3.7.3-stretch
     working_directory: ~/repo
-
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            - v1-dependencies-
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
             make install
-            # Install hadolint
+
+            echo "---- Install hadolint ----"
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
             chmod +x /bin/hadolint
-            #pip install -r requirements.txt
       - save_cache:
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-          path:
-            - ./venv
-        
-      # run lints!
       - run:
           name: run lint
           command: |
